[package]
name = "chap"
version = "1.1.2"
edition = "2021"

[lib]
name = "chap"
path = "src/lib.rs"

[[bin]]
name = "chap"
path = "src/main.rs"


[dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rustyline = "12.0.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks=false
panic = "abort"
